--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -18,13 +18,39 @@
     --c-tip: #0288f5;
     --t-color: 0.5s ease;
     --t-transform: 0.5s ease;
-    .sidebar-item.sidebar-heading.active{
+
+    .sidebar-item.sidebar-heading.active {
         background: #a0d0f7;
         transition: color 0.15s ease;
         font-weight: 600;
         color: var(--c-text-accent);
-        border-left:0;
+        border-left: 0;
         border-right: 5px solid;
         border-right-color: var(--c-text-accent);
     }
-  }
+
+    //
+    .right-anchor {
+        --rightAnchorTextColor: var(--c-text);
+        --rightAnchorFontSize: 14px;
+        /* Btn */
+        --rightAnchorBtnTextColor: var(--rightAnchorTextColor);
+        --rightAnchorBtnBgColor: var(--c-bg);
+        /* Menu */
+        --rightAnchorMenuTextColor: var(--rightAnchorTextColor);
+        --rightAnchorMenuBgColor: var(--c-bg);
+    }
+
+    /* dark theme */
+    .dark .right-anchor {
+        --rightAnchorTextColor: var(--c-text);
+        --rightAnchorFontSize: 14px;
+        /* Btn */
+        --rightAnchorBtnTextColor: var(--rightAnchorTextColor);
+        --rightAnchorBtnBgColor: var(--c-bg);
+        /* Menu */
+        --rightAnchorMenuTextColor: var(--rightAnchorTextColor);
+        --rightAnchorMenuBgColor: var(--c-bg);
+    }
+
+}
