--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -27,9 +27,12 @@
         transition: color 0.15s ease;
         font-weight: 600;
         color: var(--c-text-accent);
-        border-left: 0;
-        border-right: 5px solid;
-        border-right-color: var(--c-text-accent);
+        //border-left: 0;
+        border-left: 8px solid;
+        border-left-color: var(--c-text-accent);
     }
 
+    .code-group__nav-tab-active {
+        border-bottom: var(--c-brand) 5px solid;
+    }
 }
