新增导航链接，其他md文件内容修正

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,15 +1,19 @@
 :root {
     .home {
-        background: url(/assets/img/bg.svg)  50%/cover no-repeat;
-        .hero img{
-            border-radius: 500px;
-        }
-        .features{
-            border:0 !important;
-        }
-        .footer{
-            border: 0 !important;
-        }
+      background-repeat: no-repeat;
+      background-image: url(/assets/img/bg.svg);
+
+      .hero img {
+        border-radius: 500px;
+      }
+
+      .features {
+        border: 0 !important;
+      }
+
+      .footer {
+        border: 0 !important;
+      }
     }
 
     --homepage-width: 1920px;
